<?xml version="1.0"?>
<package format="2">
  <name>radar_to_csv</name>
  <version>0.0.1</version>
  <description>A ROS node to save radar objects to CSV</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>arbe_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_filters</exec_depend>
    <exec_depend>arbe_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <build_depend>qtbase5-dev</build_depend>
<exec_depend>qt5-qmake</exec_depend>
</package>