<?xml version="2.0"?>
<package format="2">
  <name>my_rviz_plugin</name>
  <version>0.0.1</version>
  <description>The my_rviz_plugin package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>arbe_msgs</build_depend>
  <build_depend>wf_srvs</build_depend>
  <exec_depend>arbe_msgs</exec_depend>
  <exec_depend>wf_srvs</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugin_description.xml"/>
  </export>
</package>
